Implemented deleting materials!